Login Form Align Fix

--- a/src/components/accountBox/index.css
+++ b/src/components/accountBox/index.css
@@ -1,10 +1,22 @@
 .login-root {
-  background: #fff;
+  height: 85vh;
+  font-size: 24px;
+  margin: 15px 0px;
+  position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  min-height: 100vh;
-  overflow: hidden;
 }
+
+.form {
+  /* position: absolute; */
+  /* top: 50%;
+  left: 50%; */
+  /* margin: -25px 0 0 -25px; */
+  width: 600px;
+}
+
 .loginbackground {
   min-height: 692px;
   position: fixed;
